clobee-ingress/ingress-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clobee-ingress-controller
  namespace: clobee-ingress
  labels:
    app: clobee-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clobee-nginx
  template:
    metadata:
      labels:
        app: clobee-nginx
    spec:
      containers:
        - name: controller
          image: registry.k8s.io/ingress-nginx/controller:v1.12.2
          args:
            - /nginx-ingress-controller
            - --ingress-class=clobee-nginx
            - --controller-class=k8s.io/ingress-nginx
            #- --enable-admission-plugins=   # ✅ webhook 검증 비활성화
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: clobee-ingress-controller
  namespace: clobee-ingress
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-name: "clobee-ingress-lb"
spec:
  type: NodePort
  selector:
    app: clobee-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 32080
    - name: https
      port: 443
      targetPort: 443
      nodePort: 32443
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: clobee-nginx
spec:
  controller: k8s.io/ingress-nginx
