clobee-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clobee-ingress
  namespace: default
spec:
  ingressClassName: clobee-nginx
  rules:
    - host: www.clobee.net
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: spring-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 3000
